--- a/Changes
+++ b/Changes
@@ -1,5 +1,5 @@
 Revision history for App-pretty
 
-0.01    2014-02-16 (SHARYANTO) (not yet released)
+0.01    2014-02-16 (SHARYANTO)
 
         - First release.
