--- a/Changes
+++ b/Changes
@@ -1,5 +1,12 @@
 Revision history for App-pretty
 
+0.04    2016-03-05 (PERLANCAR)
+
+	- No functional changes.
+
+        - Fix a couple of typo & formatting.
+
+
 0.03    2015-01-03 (PERLANCAR)
 
 	- No functional changes.
