--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for App-pretty
 
+0.05    2016-03-10 (PERLANCAR)
+
+	- Replace JSON with JSON::MaybeXS.
+
+
 0.04    2016-03-05 (PERLANCAR)
 
 	- No functional changes.
