--- a/Changes
+++ b/Changes
@@ -1,29 +1,29 @@
-0.05    2016-03-10 (PERLANCAR)
+0.05    2016-03-10  Released-By: PERLANCAR
 
 	- Replace JSON with JSON::MaybeXS.
 
 
-0.04    2016-03-05 (PERLANCAR)
+0.04    2016-03-05  Released-By: PERLANCAR
 
 	- No functional changes.
 
         - Fix a couple of typo & formatting.
 
 
-0.03    2015-01-03 (PERLANCAR)
+0.03    2015-01-03  Released-By: PERLANCAR
 
 	- No functional changes.
 
 	- Rebuild (Generate TODO.md).
 
 
-0.02    2014-04-09 (SHARYANTO)
+0.02    2014-04-09  Released-By: SHARYANTO
 
         - No functional changes.
 
         - Add examples in Synopsis.
 
 
-0.01    2014-02-16 (SHARYANTO)
+0.01    2014-02-16  Released-By: SHARYANTO
 
         - First release.
